--- a/PedraPapaelTesoura/app/src/main/res/values/strings.xml
+++ b/PedraPapaelTesoura/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="txt_pedra">Pedra</string>
     <string name="txt_papel">Papel</string>
     <string name="txt_tesoura">Tesoura</string>
+    <string name="txt_android">Mr.Robot</string>
+    <string name="txt_jogador">Jogador</string>
+    <string name="txt_score_android">0</string>
+    <string name="txt_score_jogador">0</string>
+
 </resources>
